major overhaul #1 start

--- a/src/about.njk
+++ b/src/about.njk
@@ -10,14 +10,18 @@
 	<!-- Hero card content -->
 	<div class="hero-card">
 		<h1 class="display-5 fw-bold mb-1">
-			About Us
+			Tired of Managing Your Company’s Finances Alone or with Minimal Support?
 		</h1>
 
-		<p class="fs-5 text-light mb-3" style="">
-			Seasoned CFOs with deep expertise in accounting, financial planning &
-			analysis, investment management, M & A, performance improvement, and
-			restructuring
+		<p class=" text-light mb-3" style="">
+			At Mojo CFO, our team of vetted CFOs with operational expertise in your industry is here to
+			help.
 		</p>
+		<a href="#" class="btn btn-dark hero-btn px-4 py-3 w-100" style="font-size:1.25rem;">
+			Book a Call Now To Learn More
+			<img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
+				class="ps-2">
+		</a>
 	</div>
 </div>
 
