--- a/src/faq.njk
+++ b/src/faq.njk
@@ -19,7 +19,7 @@
 		</p>
 		<div>
 			<a href="" class="btn btn-dark w-50 hero-btn">
-				<span class="me-2 px-1">GIVE US A CALL</span>
+				<span class="me-2 px-1">Let Us Know If You Have Questions</span>
 				<img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
 					alt="">
 			</a>
@@ -516,13 +516,11 @@
 		</p>
 		<a href="https://forms.gle/HW7q5Bn8mr4QP6s3A" target="_blank" class="btn btn-primary btn-lg cta-btn">
 			Let's Have a Conversation
-			<svg class="ms-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" width="16"
-				height="16" fill="currentColor" aria-hidden="true">
-			</svg>
+			<img src="https://cdn.prod.website-files.com/6616b1af6b1a369ac15900ff/6616e9a80310eee50e4e4f58_ChevronRight.svg"
+				class="ps-2">
 		</a>
 	</div>
 </section>
-
 
 {% endblock %}
 
