--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -9,13 +9,14 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
 		crossorigin="anonymous">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" />
 	<link rel="stylesheet" href="/assets/css/main.css">
 	{% block head %}{% endblock %}
 </head>
 
 <body>
 	<header>
-		<nav class="navbar navbar-expand-lg navbar-light bg-white p-3">
+		<nav class="navbar navbar-expand-lg navbar-light bg-white p-3 fixed-top">
 			<div class="container px-4">
 
 				<!-- Brand -->
@@ -23,27 +24,28 @@
 					<img src="/assets/images/mojo_logo.png" alt="Logo" height="40">
 				</a>
 
-				<!-- Mobile-only: Contact + Toggler -->
-				<div class="d-flex d-lg-none ms-auto align-items-center">
-					<a class="btn contact-us-btn text-light btn-md me-2" href="/contact">Contact
-						Us</a>
-					<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-						data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
-						aria-label="Toggle navigation">
-						<span class="navbar-toggler-icon"></span>
-					</button>
-				</div>
+				<!-- Mobile toggler -->
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+					data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
+					aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
 
-				<!-- Collapsible nav links + desktop Contact -->
 				<div class="collapse navbar-collapse" id="mainNav">
-					<ul class="navbar-nav mx-auto">
-						<li class="nav-item"><a class="nav-link" href="/faq">FAQ</a></li>
-						<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
-						<li class="nav-item"><a class="nav-link" href="/pricing">Pricing</a>
+					<ul class="navbar-nav mx-auto align-items-center">
+						<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+						<li class="nav-item"><a class="nav-link" href="/pricing">Services</a>
+						</li>
+						<li class="nav-item"><a class="nav-link" href="/about">About Us</a></li>
+						</li>
+						<li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a>
 						</li>
 					</ul>
-					<a class="btn contact-us-btn text-light btn-md d-none d-lg-inline-block ms-auto"
-						href="/contact">Contact Us</a>
+
+					<!-- CTA -->
+					<a class="btn conversation-btn ms-lg-auto" href="/contact">
+						Let’s Have a Conversation
+					</a>
 				</div>
 			</div>
 		</nav>
@@ -58,8 +60,7 @@
 			<div class="row">
 				<div class="col-md-6">
 					<p>
-						© 2025 Mojo Advisors LLC. All rights reserved.
-						<a href="/t_and_c/" class="text-light">Terms and Conditions</a>
+						© 2025 Mojo CFO. All rights reserved.
 					</p>
 				</div>
 				<div class="col-md-6 text-md-end">
