--- a/src/assets/css/about.css
+++ b/src/assets/css/about.css
@@ -28,14 +28,14 @@
 }
 
 .hero .hero-card>h1.display-5 {
-	font-size: 5rem;
+	font-size: 4rem;
 	font-weight: 700;
 	padding: 1rem;
 }
 
-.hero .hero-card>p.fs-5 {
+.hero .hero-card p {
 	color: black;
-	font-size: 1.6rem;
+	font-size: 1.5rem;
 	font-weight: 500;
 	padding: 1rem;
 }
