--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -17,11 +17,11 @@
 <body>
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-light bg-white p-3 fixed-top">
-			<div class="container px-4">
+			<div class="container">
 
 				<!-- Brand -->
 				<a class="navbar-brand" href="/">
-					<img src="/assets/images/mojo_logo.png" alt="Logo" height="40">
+					<img src="/assets/images/mojo_logo2.png" alt="Logo" height="70">
 				</a>
 
 				<!-- Mobile toggler -->
@@ -32,21 +32,21 @@
 				</button>
 
 				<div class="collapse navbar-collapse" id="mainNav">
-					<ul class="navbar-nav mx-auto align-items-center">
+					<ul class="navbar-nav mx-auto align-items-center w-50">
 						<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 						<li class="nav-item"><a class="nav-link" href="/pricing">Services</a>
 						</li>
-						<li class="nav-item"><a class="nav-link" href="/about">About Us</a></li>
+						<li class="nav-item"><a class="nav-link" href="/about">About</a></li>
+						<li class="nav-item"><a class="nav-link" href="/contact">Contact</a>
 						</li>
-						<li class="nav-item"><a class="nav-link" href="/contact">Contact Us</a>
+						<li class="nav-item"><a class="nav-link" href="/contact">FAQ</a>
 						</li>
 					</ul>
-
-					<!-- CTA -->
-					<a class="btn conversation-btn ms-md-auto" href="/contact">
-						Let’s Have a Conversation
-					</a>
 				</div>
+				<a class="btn conversation-btn ms-md-auto" href="/contact">
+					Let’s Have a Conversation
+				</a>
+
 			</div>
 		</nav>
 	</header>
